--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -12,4 +12,4 @@ jobs:
     - run: |
         make
         pip install pylint
-        pylint $(git ls-files '*.py')
+        pylint docsis_exporter.py
