--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,8 +8,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    
+    - uses: actions/cache@v4
+      with:
+        path: ~/.cache/pylint
+        key: pylint-${{ github.ref_name }}
+
+    - uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          pip-
 
     - run: |
         make
         pip install pylint
-        pylint docsis_exporter.py
+        pylint -v docsis_exporter.py
