--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    
+
     - uses: actions/cache@v4
       with:
         path: ~/.cache/pylint
@@ -21,7 +21,4 @@ jobs:
         restore-keys: |
           pip-
 
-    - run: |
-        make
-        pip install pylint
-        pylint -v docsis_exporter.py
+    - run: make lint
