--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 prometheus-client==0.20.0
 requests>=2.28
 beautifulsoup4>=4.11
-pyjsparser
-tabulate
+pyjsparser>=2.7.1
+tabulate>=0.9.0
+pylint>=3.2.5
